# PubQuizMania

./: .flake8  .gitignore  README.md  mongo_questions.yml  pytest.ini
PubQuizMania/: asgi.py  settings.py  urls.py
PubQuizMania/app/: db.py  models.py  repository.py  serializers.py  service.py  startup.py
PubQuizMania/app/controller/: controller.py  request.py  validation.py
PubQuizMania/app/controllers/: quiz_controller.py
PubQuizMania/app/repository/: __init__.py
PubQuizMania/app/services/: __init__.py  quiz_service.py
backend/: .flake8  README.md  manage.py  pyproject.toml  requirements.txt
backend/PubQuizMania/: urls.py  wsgi.py
backend/PubQuizMania/app/: repository.py  serializers.py
backend/PubQuizMania/app/controller/: request.py
backend/experiments/: clean_data.py  import_export_yaml.py  questions.txt  questions2.txt  questions3.txt  split_question.py  terminal_app.py
experiments/: export_from_mongo.py  fuzzywuzzy_example.py  import_export_yaml.py  questions.yml  terminal_app.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  apiClient.js  main.js  router.js
frontend/src/components/: LabelingQuestion.vue  LabelingSection.vue  LabelingStats.vue  PVPSection.vue  QuizProgress.vue  QuizQuestion.vue
frontend/src/components/labeling/: CategorySection.vue  LabelingQuestion.vue  LabelingSection.vue  LabelingStats.vue
frontend/src/components/navigation/: NavigationItem.vue
frontend/src/mocks/: handlers.js
frontend/src/plugins/: vuetify.js
frontend/src/store/: mutationConstants.js  store.js
(+3 files in other folders)
