[tool.black]
line-black=120
[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["josipmrden <josip.mrden@memgraph.io>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "^3.4.1"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.7"
coreapi = "^2.3.3"
coreschema = "^0.0.4"
Django = "^3.2.8"
django-cors-headers = "^3.10.0"
django-rest-swagger = "^2.2.0"
djangorestframework = "^3.12.4"
djongo = "^1.3.6"
fuzzywuzzy = "^0.18.0"
idna = "^3.3"
itypes = "^1.2.0"
Jinja2 = "^3.0.2"
MarkupSafe = "^2.0.1"
openapi-codec = "^1.3.2"
pymongo = "^3.12.1"
pytz = "^2021.3"
PyYAML = "^6.0"
requests = "^2.26.0"
simplejson = "^3.17.5"
uritemplate = "^4.1.1"
urllib3 = "^1.26.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
